# some-interview

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  main.cpp
include/: api.hpp  http_client.hpp  session.hpp  utils.hpp
src/: api.cpp  http_client.cpp  session.cpp  utils.cpp
tests/: test_endpoint.cpp  test_main.cpp
